added login capability with token to demo-application
